Add java 17 workaround for owl toolkit lib.